--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-110x146.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Vancouver home cleaning serice available 24 hours on demand">
   
-  <title>Home</title>
+  <title>Snappily Clean Vancouver</title>
   
 <link rel="canonical" href="./">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -633,7 +633,7 @@ body{font-family: Roboto;}blockquote{border-color: #fe8b8b;}.display-1{font-fami
 
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-6" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sEitHyagpuVWriO0mo6e0vglBts/JFQigAe0KJK+5nudGq3atRS0V+lHUALEGk+w3O/2ROIZJDWNaywoi+hidqyo7iCc7vP7dVVp/ONAn59hIVPOjwr0XQNPtqzw8qzk.Xh+yPJjv3Beh5h3kzIQGudfTnfmPPqZhcqyfEc9h3HKCsurCPkb4Pk7CraziT8QrZrub+tSBjupfJ2Prxc7RRvZRu2OgyElMEBcHTnIxUZODPEXf9t4mL7JtmRBjYni0">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="u6/+0KlZNVUYqOeN8CdDqlfVDOrCFfXeRWZF2sBRLIyxIO7XyOjqGpVIOaLB/s5dugSD0UZglNvRpwbYJXLthDbY5uyBfglwtbcWoxHu5cBSJ1akkXcLU0s0x29rnIw5.AYHI/YXNCgRD/CIWM3Yn1QgYRtXJI5WFjqRk52SnrYgeQQC9OcA46q5x4hfjMfBhQ6iXq1msMQAXNh0dVlZyjFQkRHtVIynbF471/+pWtyA7vHQGl9xFqBhIvWjTPAxw">
                     <div class="mbr-row">
                       <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                           <template data-form-alert="" type="amp-mustache">Request received. A Snappily representative will contact you shortly. Thank you.</template>
